Archive2/70/55d15c87e5163e/output
main.cpp:51:16: error: redefinition of 'struct container::vector'
         struct vector {
                ^
main.cpp:9:16: error: previous definition of 'struct container::vector'
         struct vector {
                ^
main.cpp:56:16: error: redefinition of 'struct container::list'
         struct list   {
                ^
main.cpp:14:16: error: previous definition of 'struct container::list'
         struct list   {
                ^
main.cpp:64:12: error: redefinition of 'struct wrap_into_container<ContainerMaker>'
     struct wrap_into_container
            ^
main.cpp:22:12: error: previous definition of 'struct wrap_into_container<ContainerMaker>'
     struct wrap_into_container
            ^
main.cpp: In function 'int main()':
main.cpp:73:9: error: redefinition of 'int main()'
     int main()
         ^
main.cpp:31:9: error: 'int main()' previously defined here
     int main()
         ^
